samples/_failures_safe/1761284618_4a15ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1e66bc6.c: In function ‘main’:
./samples/SAFE/__tmp_d1e66bc6.c:154:9: error: expected declaration or statement at end of input
  154 |         if (choice == 5) {
      |         ^~
./samples/SAFE/__tmp_d1e66bc6.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1e66bc6.c:154:9: error: expected declaration or statement at end of input
